/**
 *  Copyright The WildFly Authors
 *  SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.wildfly.feature.pack.grpc.test.helloworld";
import "message.proto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (messages.HelloRequest) returns (messages.HelloReply) {}
}

